Fix scrollbar on desktop

--- a/src/app.css
+++ b/src/app.css
@@ -90,7 +90,6 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
   display: flex;
